# monitor-conformence

./: .gitignore  CLAUDE.md  Dockerfile  MDP-product.py  Premise_pomdp.ipynb  README.md  Snakes_Ladders.ipynb  file  notebook.ipynb  poly_editor.py  pyproject.toml
VerifiableMonitorsTex/inprogress/: __latexindent_temp_inprogress.tex  inprogress.bbl-SAVE-ERROR  inprogress.tex  literature.bib  preamble.sty  todo.md  zotero.bib  zotero_dblp.bib
experiments/: gb_exact.pm  smoke-test.yml
experiments/conditional-exp/: bisection.yml
experiments/improved-learning/: compare_lsharp_lstar.yml  conditional_methods.yml  lsharp_methods.yml
experiments/learn-exp/: comp-base.yml  prem_sam.yml  premise.yml  snl.yml
experiments/premise/: airportB-3.nm  refuel.nm
experiments/reduced-exp/: verify.yml
experiments/snake_ladder/: mc_2x2.pm  mc_2x2_deadlock.pm  mc_nxn.pm  mc_u_nxn.pm  mon_2x2.pm
experiments/splitting_ret/: non-split.pm  sketch.props  split.pm
notebooks/: Analysis.ipynb  Analysis_conditional_verify.ipynb  ExtractWords.ipynb  FullLearning.ipynb  MonitorLearning.ipynb  MonitorLearningManual.ipynb  Premise_pomdp.ipynb  Snakes_Ladders.ipynb  ToVerAnalysis.ipynb  mc_product.ipynb  paper.ipynb
notebooks/old/: Analysis_conditional_learning.ipynb  Analysis_conditional_verify.ipynb  paper.ipynb
results/exp-2025-04-15_15-00-29-comp-base-prem_sam-premise-snl-snl_sam/json/: 2025-04-15_15-00-29_airport_(file=airportA-3.nm,parameters={'constants': 'DMAX=3,PMAX=3'},horizon=10).json  2025-04-15_15-00-29_airport_(file=airportA-3.nm,parameters={'constants': 'DMAX=3,PMAX=3'},horizon=10,slack=[0, 0]).json  2025-04-15_15-00-29_airport_(file=airportA-3.nm,parameters={'constants': 'DMAX=3,PMAX=3'},horizon=10,slack=[0.2, 0.05]).json  2025-04-15_15-00-29_airport_(file=airportA-3.nm,parameters={'constants': 'DMAX=3,PMAX=3'},horizon=11,slack=[0, 0]).json  2025-04-15_15-00-29_airport_(file=airportA-3.nm,parameters={'constants': 'DMAX=3,PMAX=3'},horizon=9,slack=[0.2, 0.05]).json  2025-04-15_15-00-29_airport_(file=airportA-3.nm,parameters={'constants': 'DMAX=4,PMAX=4'},horizon=10).json  2025-04-15_15-00-29_airport_(file=airportA-3.nm,parameters={'constants': 'DMAX=5,PMAX=5'},horizon=10).json  (+95 more)
sketch/: check.props  pomdp.drn  sketch.templ
src/: MC_product.py  MDP_product.py  MonitorLearning.py  draw.py  loaders.py
tests/: FullLearning.py  dfa1.pm  gb_reachability.pm  mc1.pm  smoke-test.yml  test.yml  test_transformations.py
tests/conditional-exp/: bisection.yml  cond-verify.yml
tests/icy-driving/: icy-driving.pm
tests/learn-exp/: compare-trad.yml  loes.yml  prem_sam.yml  premise.yml  premise_lsharp.yml  snl.yml  snl_sam.yml
tests/premise/: refuelB.nm
tests/reduced-exp/: learn.yml
tests/simple/: mc1.pm
tests/snake_ladder/: mc_nxn.pm  mc_u_nxn.pm  mon_2x2_deadlock.pm  mon_nxn.pm
tests/standard-exp/: learn.yml  verify.yml
tests/verify-exp/: verify.yml
tover/analysis/: load_data.py  plots.py
tover/cli/: experiment.py  run.py
tover/core/: learning.py  oracles.py  sul.py  synthesis.py  transformations.py  verification.py
tover/experiments/: config.py  runner.py  scheduler.py
tover/lsharp/: Example.py  IcyDrivingSUL.py  apartness.py  box.py  monitor_lsharp.py  monitor_observation_tree.py  monitor_wp_method.py  moore_node.py
tover/models/: algorithms.py  automata.py  pomdp.py  snakes.py
tover/utils/: draw.py  helpers.py  logger.py
verimon/: LStarPrime.py  MDP_product.py  MonitorLearning.py  algs.py  analysis.py  demo.py  experiment.py  generator.py  loaders.py  logger.py  run.py  transformations.py  unrolling.py  utils.py  verify.py
verimon/analysis/: __init__.py  load_data.py  plots.py  tables.py
(+210 files in other folders)
