[tool.poetry]
name = "verimon"
version = "0.1.0"
description = ""
authors = ["Luko van der Maas <luko.vandermaas@ru.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aalpy = { git = "https://github.com/DES-Lab/AALpy.git" }
graphviz = "^0.20.3"
matplotlib = "^3.9.2"
stormpy = { path = "../stormpy", develop = true }
stormvogel = { path = "../stormvogel" }
payntbind = { path = "../synthesis/payntbind", develop = true }
paynt = { path = "../synthesis", develop= true }
click = "^8.1.7"
z3-solver = "^4.13.3.0"
psutil = "^6.1.0"
setuptools = "^75.2.0"
pybind11 = "^2.13.6"
black = "^24.10.0"
setproctitle = "^1.3.4"
tabulate = "^0.9.0"
scipy = "^1.15.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
pybind11-stubgen = "^2.5.1"
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore=["E402", "F405", "F403"]
