[project]
name = "tover"
version = "0.1.0"
description = "ToVer: Learning Verified Monitors for Hidden Markov Models"
authors = [{ name = "Luko van der Maas", email = "luko.vandermaas@ru.nl" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aalpy",
    "graphviz>=0.20.3,<0.21",
    "matplotlib>=3.9.2,<4",
    "black>=24.10.0,<25",
    "setproctitle>=1.3.4,<2",
    "tabulate>=0.9.0,<0.10",
    "scipy>=1.15.2,<2",
    "z3-solver>=4.15.4.0",
    "pysmt>=0.9.6",
    "stormvogel>=0.11.0",
    "typed-argument-parser>=1.10.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
# paynt = [
#     "paynt>=0.3.0",
# ]
# stormpy = [
#     "stormpy>=1.12.0"
# ]
dev = [
    "notebook>=7.2.2,<8",
    "py-spy>=0.4.1",
    "pybind11-stubgen>=2.5.1,<3",
    "ruff>=0.9.2,<0.10",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.sources]
stormpy = { path = "../stormpy", editable=true }

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
ignore=["E402", "F405", "F403", "E741"]

[tool.basedpyright]
 allowedUntypedLibraries = ["stormpy"]
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownLambdaType = "none"
reportUnusedCallResult = "none"
reportMissingTypeStubs = "none"
reportUninitializedInstanceVariable = "none"
